--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ $(document).ready(function(){
 		<h1 style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
 		<div id="mainBubble" class="container">
-		<svg class="mainBubbleSVG" width="1250" height="1000"><text id="bubbleItemNote" x="10" y="390.16001" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
+		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="390.16001" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
 			<script script type="text/javascript"> 
 			   var w = window.innerWidth * 0.9 * 0.95;
    var h = Math.ceil(w * 0.7);
@@ -603,7 +603,7 @@ $(document).ready(function(){
    h = Math.ceil(w / nTop * 3);
    svgContainer.style("height", h + "px");
 
-   var colVals = d3.scale.category20b();
+   var colVals = d3.scale.category10();
 
    bubbleObj.append("circle")
      .attr("class", "topBubble")
