--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
 			</div>
   		<h1 style="color:#004953" class="titre_section"> De quoi parle-t-on ? </h1>
 
-		<!-- Graphe intro Irène -->
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> 
+	<h2> Crise des migrants ou crise des réfugiés? </h2><br>
+	
+</div>
+			
+			<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent.</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: justify">
