--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</div>
   		<h1 style="color:#004953" class="titre_section"> De quoi parle-t-on ? </h1>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> 
+<div style="background-color:  transparent; border:3px solid white"> 
 	<h2> Crise des migrants ou crise des réfugiés? </h2><br>
 	
 </div>
