--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
   		<h1 style="color:#004953" class="titre_section"> De quoi parle-t-on ? </h1>
-
-<div style="background-color:  transparent; border:3px solid white"> 
+<div class="container">
+<div style="background-color:  transparent; border:3px solid white;border-radius: 25px;"> 
 	<h2> Crise des migrants ou crise des réfugiés? </h2><br>
 	
 </div>
+			</div>
 			
 			<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent.</h2>	
