--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 <div class="container">
 <div style="background-color:  transparent; border:6px solid white;border-radius: 25px;margin-bottom: 10px;"> 
 	<h2> Crise des migrants ou crise des réfugiés? </h2><br>
-	
+	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques ont plaidé pour l'utilisation du terme "réfugié". <br>
+	En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
+	Sur cette page, nous nous efforcerons donc de décrire les situations différentes dans lesquelles se trouvent les personnes en migration, ainsi que les différents statuts juridiques auxquels elles peuvent accéder. Nous nous concentrerons plus particulièrement sur les demandeurs d'asile, et retracerons la chronologie des principaux événements de cette crise des migrants et des réfugiés.  
 </div>
 			</div>
 			
@@ -173,7 +175,7 @@
 			<div style="font-size: 100px;">
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
-  			<h1 style="color:#004953"> La crise des migrants en Europe : état des lieux </h1>
+  			<h1 style="color:#004953"> La "crise des migrants" en Europe : état des lieux </h1>
 			
 	<div class="container" style="display:flex;justify-content:space-between;">
 	
