--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   		<h1 style="color:#004953" class="titre_section"> De quoi parle-t-on ? </h1>
 <div class="container">
 <div style="background-color:  transparent; border:6px solid white;border-radius: 25px;margin-bottom: 10px;"> 
-	<h2> Crise des migrants ou crise des réfugiés? </h2>
+	<h2 style="color:#000000"> Crise des migrants ou crise des réfugiés? </h2>
 <div style="color:#000000; text-align: justify;text-justify: inter-word;">	
 	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques ont plaidé pour l'utilisation du terme "réfugié". <br>
 	En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
@@ -97,7 +97,7 @@
 </div>
 </div>
 			</div>
-			
+			<br>
 			<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent.</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
