--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
 		<!-- Camembert Aliénor -->
 		<section id="three" class="wrapper style13 align-center">
 			<h2> Focus sur la demande d'asile </h2>
-
+<h3> Statut et durée du titre de séjour </h3> 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
 	<div style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
 		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
 		<br>
-		Les personnes reconnues <b> réfugiées </b> en France sont placées sous la protection juridique et administrative de l'OFPRA (Office français de protection des réfugiés et apatrides) et bénéficient d'une carte de résident valable dix ans. <br>
+		Les personnes reconnues <b> réfugiées </b> en France sont placées sous la protection juridique et administrative de l'OFPRA (Office français de protection des réfugiés et apatrides) et bénéficient d'une carte de résident valable <b> dix ans </b>. <br>
 		<br>
-		Le bénéfice de la <b> protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave (peine de mort, torture, traitement inhumain, conflit armé, etc.). Les bénéficiaires de la protection subsidiaire sont placés sous la protection juridique et administrative de l'OFPRA et se voient délivrer une carte de séjour temporaire d'une durée d'un an renouvelable. <br>
+		Le bénéfice de la <b> protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave (peine de mort, torture, traitement inhumain, conflit armé, etc.). Les bénéficiaires de la protection subsidiaire sont placés sous la protection juridique et administrative de l'OFPRA et se voient délivrer une carte de séjour temporaire d'une durée d'<b>un an renouvelable </b>. <br>
 		<br>
 		Le <b> statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. La durée du titre de séjour accordé depend donc des pays d'accueil. 
 </div>
