--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ $(document).ready(function(){
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
 		<h1 style="color:#004953"> Quizz </h1>
-		<h2 style="color:#004953"> Testez vos connaissances ! </h2>
+		<h2 style="color:#004953"> Serez vous meilleurs que nos candidats: testez vos connaissances ! </h2>
 
 		<div class="container">
 		 <div id="frame" role="content"></div> 
