--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style='background-color: transparent;border:3px solid #e48400;'> Il est vrai que depuis 2004, 200 000 étrangers entrent légalement en France chaque année. Cependant, du fait des décès et des départs, la population immigrée en France ne croit que de 90 000 personnes par an. De plus, Marine Le Pen le dit pas que rapportée à la population française, ce chiffre est le plus faible d'Europe. Enfin, il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faite oscillent entre 10 0000 et 100 000.
+<div class="devrait1" style='background-color: transparent;border:3px solid #e48400; text-align: justify;text-justify: inter-word;'> Il est vrai que depuis 2004, 200 000 étrangers entrent légalement en France chaque année. Cependant, du fait des décès et des départs, la population immigrée en France ne croit que de 90 000 personnes par an. De plus, Marine Le Pen le dit pas que rapportée à la population française, ce chiffre est le plus faible d'Europe. Enfin, il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faite oscillent entre 10 0000 et 100 000.
 </div>
 </div>
 
@@ -332,12 +332,12 @@ illégaux.
 
 <div class="roundedImage"> 
     <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #d1e231 solid; margin-left:15px; "/>
-	<div class="element2"> <p class="triangle-right left" style="font-style: italic;">L'immense majorité des migrants en France sont des hommes et des femmes qui fuient la pauvreté et non la guerre.
+	<div class="element2"> <p class="triangle-right left" style="font-style: italic;">Une partie [des demandeurs d’asile] fuient la guerre en Syrie mais l’immense majorité de ces hommes et femmes fuient la pauvreté et viennent de toutes les régions du monde.
 </p> </div>
 
 </div>
 		
-<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;"> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
+<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
 </div>
 </div>
 		
@@ -362,14 +362,13 @@ illégaux.
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">En France, on a actuellement 250000 entrées et 200000 départs, soit un solde migratoire positif de 500000.
-
+  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 50 000 et 70 000 personnes.
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #009688 "> Calais ne saurait être considéré comme un hotspot.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #009688 "> Le chiffre donné par B. Hamon sur le solde migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus français ou non. Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, soit une différence considérable avec le chiffre avancé par B. Hamon.
 </div>
 </div>
 	
@@ -386,7 +385,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Calais ne saurait être considéré comme un hotspot.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Bien dit Jean-Luc!
 </div>
 </div>
 	</div>
