--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ illégaux.
 
 </div>
 		
-<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;text-align: justify;text-justify: inter-word;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
 </div>
 </div>
 		
@@ -353,7 +353,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41"> Bonjour, je m'appelle Emmanuel. <br> Regardez moi je m'appelle Emmanuel <br> Allez regardez moi <br> Bisous
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Bonjour, je m'appelle Emmanuel. <br> Regardez moi je m'appelle Emmanuel <br> Allez regardez moi <br> Bisous
 </div>
 </div>
 	
@@ -368,7 +368,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #009688 "> Le chiffre donné par B. Hamon sur le solde migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus français ou non. Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, soit une différence considérable avec le chiffre avancé par B. Hamon.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #009688;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus français ou non. Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, soit une différence considérable avec le chiffre avancé par B. Hamon.
 </div>
 </div>
 	
@@ -385,7 +385,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Bien dit Jean-Luc!
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba;text-align: justify;text-justify: inter-word;"> Bien dit Jean-Luc!
 </div>
 </div>
 	</div>
