--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 <div style="color:#000000; text-align: justify;text-justify: inter-word;">	
 	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques ont plaidé pour l'utilisation du terme "réfugié". <br>
 	En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
+	<br> La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.
+	Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.</p>
 	Sur cette page, nous nous efforcerons donc de décrire les situations différentes dans lesquelles se trouvent les personnes en migration, ainsi que les différents statuts juridiques auxquels elles peuvent accéder. Nous nous concentrerons plus particulièrement sur les demandeurs d'asile, et retracerons la chronologie des principaux événements de cette crise des migrants et des réfugiés.  
 </div>
 </div>
@@ -110,9 +112,6 @@
 				</div>
 			
 				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
-					<p>La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.
-					Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.</p>
-					Plus précisément, 
 					<ul>
 					<li><b>Un réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
 					</li>
