--- a/index.html
+++ b/index.html
@@ -907,6 +907,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 								<li><a href="https://popstats.unhcr.org/en/overview">UNHCR</a></li>
 								<li><a href="https://www.therefugeeproject.org">The Refugee Project</a></li>
 								<li><a href="https://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
+								<li><a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a></li>								
 								<li><a href="https://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a></li>
 							Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/">Sebastiao Salgado</a> pour illustrer notre propos.
