--- a/index.html
+++ b/index.html
@@ -114,6 +114,30 @@
 
 				</div>
 			
+			
+			<section id="menu" class="wrapper style1 align-center">
+				<div class="container">
+					<header>
+						<h2>Qu'y a-t-il vraiment dans leurs assiettes ?</h2>
+					</header>
+					<div class="row 200%">						
+						<section class="4u 12u$(small)">
+							<a href="#compare" <i class="icon big rounded fa-bar-chart"></i></a>
+							<p>Le saviez-vous ? <br> Les apports en sucres de certaines pâtes à tartiner équivalent à 5 biscuits au chocolat !</p>
+						</section>
+                        <section class="4u 12u$(small)">
+							<a href="#world" <i class="icon big rounded fa-globe"></i></a>
+							<p>Comparez le goûter des petits européens. </p>
+						</section>
+						<section class="4u$ 12u$(small)">
+							<a href="#brand" <i class="icon big rounded fa-shopping-cart"></i></a>
+							<p>Trouvez de véritables alternatives aux produits du quotidien, plus besoin de parcourir toutes les étiquettes !</p>
+						</section>
+					</div>
+				</div>
+			</section>
+
+			
 				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
 					<ul>
 					<li><b>Un réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
