--- a/index.html
+++ b/index.html
@@ -123,15 +123,21 @@
 					<div class="row 200%">						
 						<section class="4u 12u$(small)">
 							<a href="#compare" <i class="icon big rounded fa-bar-chart"></i></a>
-							<p>Le saviez-vous ? <br> Les apports en sucres de certaines pâtes à tartiner équivalent à 5 biscuits au chocolat !</p>
+							<p><b>Un réfugié </b> est une personne qui se trouve hors du pays 
+								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
+								et qui “du fait de sa race, de sa religion, de sa nationalité, 
+								de son appartenance à un groupe social déterminé 
+								ou de ses opinions politiques craint avec raison d’être persécutée et 
+								ne peut se réclamer de la protection de ce pays ou en raison de ladite 
+								crainte ne peut y retourner”. </p>
 						</section>
                         <section class="4u 12u$(small)">
 							<a href="#world" <i class="icon big rounded fa-globe"></i></a>
-							<p>Comparez le goûter des petits européens. </p>
+							<p>Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. </p>
 						</section>
 						<section class="4u$ 12u$(small)">
 							<a href="#brand" <i class="icon big rounded fa-shopping-cart"></i></a>
-							<p>Trouvez de véritables alternatives aux produits du quotidien, plus besoin de parcourir toutes les étiquettes !</p>
+							<p>Contrairement aux réfugiés, les <b>déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
 						</section>
 					</div>
 				</div>
