--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 			</section>
 
 			
-				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
+				<!-- <div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
 					<ul>
 					<li><b>Un réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
-					</li>
+				<!-- 	</li>
 					<li> Est considéré comme <b>“migrant”</b>, toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
 					</li>
 					<li> Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
@@ -157,9 +157,9 @@
 <!-- Pour les gouvernements, cette distinction est importante. Les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. Les pays gèrent les réfugiés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales. Les pays ont des responsabilités précises envers les demandeurs d’asile sur leurs territoires et à leurs frontières.]]]
 				<br>
 <li><b>Déplacé interne </b>: Contrairement aux réfugiés, les déplacés internes n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. [[[En tant que citoyens, les déplacés internes conservent l’ensemble de leurs droits, dont celui à la protection en vertu des droits humains et des principe du droit international humanitaire.]]] </li> -->
-					</ul>
+					<!--  </ul> 
 				</div>
-			</div>
+			</div> -->
 		
 			<h2> Focus sur la demande d'asile </h2>
 <h3> Statut et durée du titre de séjour </h3> 
