--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
 				</div>
 			
 			
-			<section id="menu" class="wrapper style1 align-center">
-				<div class="container">
+			<!-- <section id="menu" class="wrapper style1 align-center"> -->
+				<!-- <div class="container"> -->
+						<div style="display:flex;flex-direction:column; text-align: justify">
 				<h2> Trois distinctions essentielles </h2>
 				<div class="row 200%">	
 						<section class="4u 12u$(small)">
@@ -136,7 +137,7 @@
 						</section>
 					</div>
 				</div>
-			</section>
+			<!-- </section> -->
 
 			
 				<!-- <div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
