--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			
 			<!-- <section id="menu" class="wrapper style1 align-center"> -->
 				<!-- <div class="container"> -->
-						<div style="display:flex;flex-direction:column; text-align: justify">
+						<div style="display:flex;flex-direction:column; text-align: center">
 				<h2> Trois distinctions essentielles </h2>
 				<div class="row 200%">	
 						<section class="4u 12u$(small)">
