--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
 			<!-- Graphe intro Irène -->
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent.</h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
-			<div style="display:flex;flex-direction:column; text-align: justify">
+			<div style="display:flex;flex-direction:column; text-align: center">
 				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </div>
 				<div id="container" > </div>
+				<div style="display:flex;flex-direction:column; text-align: justify">
 				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006. </font> </div>
 				<div> <font color="#24292E"> Trois fois plus de demandeurs d'asile depuis 2012. (Cliquez sur la légende pour voir le changement d'échelles) </font> </div>
 
