--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			</div>
 			<br>
 			<!-- Graphe intro Irène -->
-			<h2> Réfugiés, demandeurs d'asile, déplacés internes...les mots comptent.</h2>	
+			<h2> Eclairage sur la situation mondiale en un graphe </h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
 				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </div>
@@ -119,7 +119,7 @@
 			<!-- <section id="menu" class="wrapper style1 align-center"> -->
 				<!-- <div class="container"> -->
 						<div style="display:flex;flex-direction:column; text-align: center">
-				<h2> Trois distinctions essentielles </h2>
+				<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
 				<div class="row 200%">	
 						<section class="4u 12u$(small)">
 							<font color="#24292E"> 
